updated the code of the pricing-service